--- a/drafts/ch2/basecommon.sty
+++ b/drafts/ch2/basecommon.sty
@@ -166,3 +166,14 @@
 \newcommand{\DUnif}{\textnormal{DUnif}}
 \newcommand{\xam}{X_{\textrm{am}}}
 \newcommand{\xpm}{X_{\textrm{pm}}}
+
+
+% Roman numerals (i.e. \rom{1})
+\newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
+\newcommand{\lrom}[1]{\romannumeral#1\relax}
+
+% Hugh's addition (for drafting)
+\newcommand{\diagram}{\textbf{INSERT DIAGRAM HERE }}
+
+
+
